--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.0",
+    "@types/node-telegram-bot-api": "^0.61.6",
     "nodemon": "^2.0.21",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.1",
