--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/localtunnel": "^2.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.0",
     "@types/node-telegram-bot-api": "^0.61.6",
@@ -29,6 +30,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "localtunnel": "^2.0.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "winston": "^3.8.2"
