--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "localtunnel": "^2.0.2",
