--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "lodash": "^4.17.21",
