--- a/backend/package.json
+++ b/backend/package.json
@@ -33,12 +33,13 @@
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "helmet": "^6.0.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.3.13-dev.58fc088",
+    "typeorm": "^0.3.17",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
   }
