--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
