--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "helmet": "^6.0.1",
     "localtunnel": "^2.0.2",
     "lodash": "^4.17.21",
